  introduce small bugs for code not aware of this.
- Added a `type` parameter to `Path` to force a specific string type
  on the value.
- For users running Python 2 the echo() and prompt() functions now work
  with unicode in the Python windows console.  For Python 3 the work
  is delegated to the Python interpreter as general support for Unicode
  in the console is implemented to some degree.

Version 5.1
-----------

(bugfix release, released on 17th August 2015)

- Fix a bug in `pass_obj` that would accidentally pass the context too.

Version 5.0
-----------

(codename "tok tok", released on 16th August 2015)

- Removed various deprecated functionality.
- Atomic files now only accept the `w` mode.
- Change the usage part of help output for very long commands to wrap
  their arguments onto the next line, indented by 4 spaces.
- Fix a bug where return code and error messages were incorrect when
  using ``CliRunner``.
- added `get_current_context`.
- added a `meta` dictionary to the context which is shared across the
  linked list of contexts to allow click utilities to place state there.
- introduced `Context.scope`.
- The `echo` function is now threadsafe: It calls the `write` method of the
  underlying object only once.
- `prompt(hide_input=True)` now prints a newline on `^C`.
- Click will now warn if users are using ``unicode_literals``.
- Click will now ignore the ``PAGER`` environment variable if it is empty or
  contains only whitespace.
- The `click-contrib` GitHub organization was created.

Version 4.1
-----------

(bugfix release, released on July 14th 2015)

- Fix a bug where error messages would include a trailing `None` string.
- Fix a bug where Click would crash on docstrings with trailing newlines.
- Support streams with encoding set to `None` on Python 3 by barfing with
  a better error.
- Handle ^C in less-pager properly.
- Handle return value of `None` from `sys.getfilesystemencoding`
- Fix crash when writing to unicode files with `click.echo`.