@@ -2,8 +2,14 @@ import os
 import sys
 import codecs
 
-import click
 from ._compat import PY2
+
+
+# If someone wants to vendor click, we want to ensure the
+# correct package is discovered.  Ideally we could use a
+# relative import here but unfortunately Python does not
+# support that.
+click = sys.modules[__name__.rsplit('.', 1)[0]]
 
 
 def _find_unicode_literals_frame():
